# bit-hamming-distance

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_hamming_distance.cpp  simple_bench_hamming_distance.cpp
include/: hamming_distance.hpp
src/: hamming_distance.cpp  hamming_distance_auto.cpp  hamming_distance_avx2.cpp  hamming_distance_avx512.cpp  hamming_distance_impl.hpp  hamming_distance_scalar.cpp
